--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "gh-pages": "^3.2.3",
     "vite": "^2.9.0"
-  }
+  },
+  "homepage": "https://SharonJseg.github.io/suite-landing-page"
 }
